@@ -1,10 +1,17 @@
 package view;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import command.ActionHandler;
 import gameobjects.Game;
 import gameobjects.cards.ActionCard;
 import gameobjects.cards.Card;
 import gameobjects.cards.NumberCard;
+import logic.Constants;
+import logic.Main;
+import logic.RequestType;
+import logic.Rest;
 
 import javax.imageio.ImageIO;
 import javax.swing.*;
@@ -18,6 +25,7 @@ import java.util.List;
 
 public final class Gui extends JFrame {
     private static Gui INSTANCE;
+    private final Rest rest = new Rest();
 
     private Card initialTopCard = new NumberCard("number", 1, Arrays.asList("red", "blue"), "card1");
     private List<Card> discardPile = new ArrayList<Card>(); // the cards on the hand
@@ -27,12 +35,16 @@ public final class Gui extends JFrame {
     private JPasswordField passwordfield = new JPasswordField(); //passwordfield to not show pw
     private JButton loginButton = new JButton("Log in"); // button for login
     private JButton savaLoginData = new JButton("Save Data"); //button to save login data in txt document
+    private JButton reloadPlayerList = new JButton("Reload player list");
     private ActionHandler act = new ActionHandler(); // for the buttons
     private JTable table = new JTable(); //shows all actions of game in a list
+    private JTable playerListTable = new JTable();
     private ShowCards showCards = new ShowCards();// jpanel showing the cards with picutes
     private JLayeredPane gamePanel;
-    DefaultTableModel model = new DefaultTableModel(new Object[][]{}, new String[]{"Nr.", "Player", "Action"});
+    private DefaultTableModel model = new DefaultTableModel(new Object[][]{}, new String[]{"Nr.", "Player", "Action"});
+    private DefaultTableModel playerListModel = new DefaultTableModel(new Object[][]{}, new String[]{"Playername", "Socket-ID"});
     JScrollPane scroll= new JScrollPane(table, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
+    JScrollPane playerListscroll= new JScrollPane(playerListTable, JScrollPane.VERTICAL_SCROLLBAR_ALWAYS, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
     public static Gui getInstance() {
         if(INSTANCE == null) {
             INSTANCE = new Gui();
@@ -41,11 +53,24 @@ public final class Gui extends JFrame {
     }
 
     public Gui () {
-        getDiscardPile().add(new NumberCard("number", 1, Arrays.asList("red", "green", "yellow","blue"), "card1"));
-        getDiscardPile().add(new ActionCard("action",  List.of("red", "green", "yellow","blue"),"reset"));
-        getDiscardPile().add(new NumberCard("number", 3, List.of("red"), "card3"));
+        //getDiscardPile().add(new NumberCard("number", 1, Arrays.asList("red", "green", "yellow","blue"), "card1"));
+        //getDiscardPile().add(new ActionCard("action",  List.of("red", "green", "yellow","blue"),"reset"));
+        //getDiscardPile().add(new NumberCard("number", 3, List.of("red"), "card3"));
 
         paintGamePanel(false);
+
+        playerListTable.setModel(playerListModel);
+        playerListTable.getColumnModel().getColumn(0).setPreferredWidth(50);
+        playerListTable.setEnabled(true);
+        playerListscroll.setBounds(565,0, 205, 200);
+        playerListscroll.setViewportView(playerListTable);
+        playerListscroll.setVisible(false);
+        add(playerListscroll);
+
+        reloadPlayerList.addActionListener(act);
+        reloadPlayerList.setBounds(620, 220, 120, 30);
+        reloadPlayerList.setVisible(false);
+        add(reloadPlayerList);
 
         scroll.setVisible(false); //scroll bar for game table
         table.setModel(model);
@@ -62,10 +87,12 @@ public final class Gui extends JFrame {
         loginButton.setVisible(true); // to log in
         loginButton.addActionListener(act);
         add(loginButton); // button for login
+
         savaLoginData.setBounds(250,70,120,30);
-        savaLoginData.setVisible(true); // to save the user name and passwort
+        savaLoginData.setVisible(true); // to save the username and passwort
         savaLoginData.addActionListener(act);
         add(savaLoginData); // button to save date in txt
+
         usernameTextfield.setBounds(120,30,120,30);
         usernameTextfield.setVisible(true);
         add(usernameTextfield);
@@ -73,18 +100,23 @@ public final class Gui extends JFrame {
         passwordfield.setBounds(120,70,120,30);
         passwordfield.setVisible(true);
         add(passwordfield); // pw is not visible for user
+
         passwortLabel.setBounds(10,70,120,30);
         passwortLabel.setVisible(true);
         add(passwortLabel);
+
         usernameLabel.setBounds(10,30,120,30);
         usernameLabel.setVisible(true);
         add(usernameLabel);
         add(new JLabel());
-        setSize(585,805); //square size
+
+        setSize(785,805); //square size
         setVisible(true);
         setResizable(false);
 
         setIconImage(new ImageIcon("cardimages\\image_icon.png").getImage());
+
+        setDefaultCloseOperation(EXIT_ON_CLOSE);
     }
 
     public List<Card> getDiscardPile() {
@@ -100,6 +132,10 @@ public final class Gui extends JFrame {
         initialTopCard = game.getInitialTopCard();
         paintGamePanel(true);
         showCards.repaint();
+    }
+
+    public void addDataToTable(Object... data){
+        playerListModel.addRow(data);
     }
 
     public void paintGamePanel(boolean visibility){
@@ -127,6 +163,45 @@ public final class Gui extends JFrame {
         add(gamePanel);
     }
 
+    public void addUserDataToPlayerListModel(){
+        playerListModel.setRowCount(0);
+
+        String userdata;
+
+        try {
+            userdata = rest.requestWithReturn(Constants.GET_USER_CONNECTIONS.get(), Main.getToken(), RequestType.GET);
+            System.out.println(userdata);
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
+        }
+
+        String[] usernames = new String[0];
+        String[] socketIds = new String[0];
+        JsonNode jsonNode = null;
+
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            jsonNode = objectMapper.readTree(userdata);
+
+            usernames = new String[jsonNode.size()];
+            socketIds = new String[jsonNode.size()];
+
+            for (int i = 0; i < jsonNode.size(); i++) {
+                JsonNode node = jsonNode.get(i);
+                usernames[i] = node.get("username").asText();
+                socketIds[i] = node.get("socketId").asText();
+            }
+        } catch (JsonProcessingException ex) {
+            ex.printStackTrace();
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
+        }
+
+        for(int i = 0; i < jsonNode.size(); i++){
+            Gui.getInstance().addDataToTable(usernames[i], socketIds[i]);
+        }
+    }
+
     public void setUsernameTextfield(String userName){
         getUsernameTextfield().setText(userName);
     }
@@ -151,7 +226,10 @@ public final class Gui extends JFrame {
     public JTable getTable(){return table;}
 
     public JScrollPane getScroll(){return scroll;}
+    public JScrollPane getPlayerListscroll(){return playerListscroll;}
 
-
+    public JButton getReloadPlayerList() {
+        return reloadPlayerList;
+    }
 }
 
